--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="content-wrapper">
 		<h1>OpenShift on GCP !!! </h1>
-	    	<h2 th:text="'My hostname is : '+${hostname}" />
+	    	<h2 th:text="'JUST CHANGE SOMETHING IN THE SOURCE CODE My hostname is : '+${hostname}" />
 	    	<h2 th:text="'Version : '+${version}"> </h2>
 	    	<img src="poneycloud.png" ></img>
 	</div>
